# L-AutoDA

./: .gitignore  README.MD  pyproject.toml  requirements.txt  run.py  run_attack.py  run_eoh.py
configs/data_cfgs/: cifar10.json
core/attacks/: AutoDA.py  BDAttack.py  EVOAttack_template.py  HSJAttack.py  __init__.py
core/data/: __init__.py
core/search_utils/: __init__.py  problem.py  prompts.py  task.py
